--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification:
 bing_site_verification:
-naver_site_verification:
+naver_site_verification: "48f2bd48b730d73622184357ed427657d6f296a1"
 yandex_site_verification:
 baidu_site_verification:
 
