--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ analytics:
 # Site Author
 author:
   name: "Minsub Song"
-  avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "재밌는거 하는 사람입니다🤓"
+  avatar: "/images/bio/minsub.jpeg"
+  bio: "재밌는거 하는 사람 ;)"
   location: "South Korea"
   email:
   links:
@@ -263,5 +263,9 @@ defaults:
       share: true
       related: true
       show_date: true
+      toc_sticky: true
+      toc_label: "Table of contents"
+      toc_icon: "fa-solid fa-eye"
+      author_profile: false # 왼쪽 저자 프로필
 
 date_format: "%Y-%m-%d"
