--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "https://sonG1031.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo: "/assets/images/logo/logo_red2.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: true # true, false (default)
 words_per_minute: 200
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name: "Minsub Song"
-  avatar: "/images/bio/minsub.jpeg"
+  avatar: "assets/images/bio/minsub.jpeg"
   bio: "재밌는거 하는 사람 ;)"
   location: "South Korea"
   email:
