--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       # url: "https://your-website.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/sonG1031"
+      url: "https://github.com/songminsopu"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/minsub.5ong/"
@@ -127,7 +127,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/sonG1031"
+      url: "https://github.com/songminsopu"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/minsub.5ong/"
